[package]
name = "img-extractor"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.81"
glob = "0.3.1"
rayon = "1.10.0"
serde = "1.0.197"
serde_json = "1.0.115"
shroom-img = { version = "0.1.0", path = "../shroom-img" }
