[package]
name = "img-extractor"
version = "0.1.0"
edition = "2024"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.96"
glob = "0.3.2"
rayon = "1.10.0"
serde = "1.0.218"
serde_json = "1.0.139"
shroom-img = { version = "0.1.0", path = "../shroom-img" }
