[package]
name = "shroom-net"
version = "0.4.1"
edition = "2021"

[[bench]]
name = "cipher_benchmark"
harness = false

[dev-dependencies]
turmoil = "0.6"
criterion = "0.5"

[dependencies]
anyhow = "1"
arrayvec = "0.7"
bytes = "1"
thiserror = "1"
rand = "0.8"
futures = "0.3"
num_enum = "0.7"
tokio = { version = "1", features = ["rt", "macros", "io-util", "net"] }
tokio-util = { version = "0.7", features = ["codec"] }
shroom-pkt = { version = "0.1", path = "../shroom-pkt" }
shroom-crypto = { version = "0.1.0", path = "../shroom-crypto" }
