[package]
name = "shroom-pkt"
version = "0.2.0"
edition = "2024"

[features]
default = ["eof_ext"]
# provides extra data, for packet parsing errors
eof_ext = []

[[test]]
name = "tests"
path = "tests/progress.rs"

[dev-dependencies]
proptest = "1"
trybuild = { version = "1", features = ["diff"] }

[dependencies]
anyhow = "1.0.96"
array-init = "2.1.0"
arrayvec = "0.7.6"
bitflags = "2.8.0"
bytemuck = "1.21.0"
bytes = "1.10.0"
chrono = "0.4.39"
derive_more = { version = "1.0.0", features = ["full"] }
either = "1.13.0"
euclid = "0.22.11"
itertools = "0.13"
num_enum = "0.7.3"
packed_struct = "0.10.1"
paste = "1.0.15"
thiserror = "2.0.11"
shroom-pkt-derive = { path = "../shroom-pkt-derive" }
nt-time = { version = "0.10.6", features = ["chrono", "std"] }
hexlit = "0.5.5"

