[package]
name = "shroom-wz"
version = "0.1.0"
edition = "2021"

[features]
default = []
mmap = ["memmap2"]
webp = ["webp-animation"]

[dependencies]
webp-animation = { version = "0.9", optional = true }
aes = "0.8"
anyhow = { version = "1" }
binrw = "0.13"
bytemuck = "1"
image = "0.24"
itoa = "1"
flate2 = { version = "1", features = ["zlib"] }
memmap2 = { version = "0.9", optional = true }
texpresso = "2"
serde = { version = "1", features = ["derive"] }
derive_more = { version = "1.0.0-beta.6", features = [
    "from",
    "into",
    "deref",
    "deref_mut",
    "try_into",
    "into_iterator",
] }
uuid = { version = "1", features = ["v4"] }
indexmap = { version = "2", features = ["serde"] }
encoding_rs = "0.8"
serde_json = "1"
shroom-crypto = { version = "0.1.0", path = "../shroom-crypto" }
rgb = "0.8.37"
bit-struct = "0.3.2"
num_enum = "0.7.2"
derive_builder = "0.12.0"
