[package]
name = "shroom-wz"
version = "0.1.0"
edition = "2021"

[features]
default = []
mmap = ["memmap2"]
webp = ["webp-animation"]

[dev-dependencies]
quickcheck = "1"
quickcheck_macros = "1"

[dependencies]
aes = "0.8"
anyhow = { version = "1" }
binrw = "0.13"
bit-struct = "0.3.2"
bytemuck = "1"
derive_more = { version = "1.0.0-beta.6", features = [
    "from",
    "into",
    "deref",
    "deref_mut",
    "try_into",
    "into_iterator",
] }
encoding_rs = "0.8"
indexmap = { version = "2", features = ["serde"] }
flate2 = { version = "1", features = ["zlib"] }
image = "0.24"
memmap2 = { version = "0.9", optional = true }
num_enum = "0.7.2"
rgb = "0.8.37"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
texpresso = "2"
uuid = { version = "1", features = ["v4"] }
webp-animation = { version = "0.9", optional = true }
shroom-crypto = { version = "0.1.0", path = "../shroom-crypto" }
